--- a/Gopnik's Adventure/Storyboards/LevelTwo.storyboard
+++ b/Gopnik's Adventure/Storyboards/LevelTwo.storyboard
@@ -514,6 +514,9 @@
                                 <state key="normal" title="Fire">
                                     <color key="titleColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="fireButtonPressed:" destination="2Ye-ex-qnZ" eventType="touchUpInside" id="yjt-3A-LHz"/>
+                                </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SUK-gm-Zxz">
                                 <rect key="frame" x="299" y="694" width="9" height="17"/>
@@ -584,6 +587,11 @@
                                 <rect key="frame" x="7" y="725" width="7" height="16"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rEw-WI-InA">
+                                <rect key="frame" x="20" y="731" width="11" height="2"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -668,6 +676,7 @@
                         <outlet property="bot8Image" destination="vqX-xM-6dc" id="awb-Ka-ZPQ"/>
                         <outlet property="bot9Image" destination="ZXh-gF-fIz" id="tti-8r-vRo"/>
                         <outlet property="bottomWallImage" destination="TJv-zl-ONy" id="adZ-D9-MPl"/>
+                        <outlet property="bullet1Image" destination="rEw-WI-InA" id="xPu-Iz-SWf"/>
                         <outlet property="characterImage" destination="xk8-Pb-LHF" id="OED-W4-JYJ"/>
                         <outlet property="leftWallImage" destination="VGf-nd-LzC" id="BGP-az-IlC"/>
                         <outlet property="rightWallImage" destination="F30-Hg-aT0" id="OIT-jC-VdV"/>
