--- a/Gopnik's Adventure/Storyboards/LevelTwo.storyboard
+++ b/Gopnik's Adventure/Storyboards/LevelTwo.storyboard
@@ -593,6 +593,16 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9bD-zu-Gnp">
+                                <rect key="frame" x="271" y="613" width="12" height="25"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yyY-0i-bww">
+                                <rect key="frame" x="350" y="392" width="12" height="25"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="WZ5-8d-CtE"/>
@@ -676,6 +686,8 @@
                         <outlet property="bot8Image" destination="vqX-xM-6dc" id="awb-Ka-ZPQ"/>
                         <outlet property="bot9Image" destination="ZXh-gF-fIz" id="tti-8r-vRo"/>
                         <outlet property="bottomWallImage" destination="TJv-zl-ONy" id="adZ-D9-MPl"/>
+                        <outlet property="bouncyBot1Image" destination="9bD-zu-Gnp" id="CxV-Xs-kI7"/>
+                        <outlet property="bouncyBot2Image" destination="yyY-0i-bww" id="ueb-9I-A5M"/>
                         <outlet property="bullet1Image" destination="rEw-WI-InA" id="xPu-Iz-SWf"/>
                         <outlet property="characterImage" destination="xk8-Pb-LHF" id="OED-W4-JYJ"/>
                         <outlet property="leftWallImage" destination="VGf-nd-LzC" id="BGP-az-IlC"/>
